# c_primer_plus

./: CMakeLists.txt
chapter02/part2_1/: _1first.c
chapter02/part2_5/: _1fathm_ft.c
chapter02/part2_6/: _1two_func.c
chapter03/part3_1/: _1platinum.c
chapter04/part4_1/: _1talkback.c
chapter04/part4_3/: _1pizza.c
chapter05/part5_1/: _1shoes1.c  _2shoes2.c
chapter05/part5_5/: _1convert.c
chapter05/part5_6/: _1pound.c
chapter05/part5_7/: _1running.c
chapter06/part6_1/: _1summing.c
chapter06/part6_10/: _1rows1.c
chapter06/part6_12/: _1power.c
chapter06/part6_3/: _1cmpflt.c
chapter06/part6_4/: _1sweetie1.c
chapter06/part6_5/: _1sweetie2.c  _2for_cube.c
chapter06/part6_7/: _1postage.c
chapter06/part6_8/: _1do_while.c  _2entry.c
chapter07/part7_1/: _1colddays.c
chapter07/part7_3/: _1chcount.c
chapter07/part7_4/: _1wordcnt.c
chapter07/part7_5/: _1paint.c
chapter07/part7_7/: _1animals.c
chapter08/part8_1/: _1echo.c
chapter08/part8_6/: _1checking.c
chapter09/part9_5/: _1loccheck.c
chapter09/part9_6/: _1swap1.c  _2swap2.c
chapter10/part10_2/: _1rain.c
chapter10/part10_3/: _1pnt_add.c  _2day_mon3.c
chapter10/part10_4/: _1sum_arr1.c
chapter10/part10_5/: _1ptr_ops.c
chapter10/part10_7/: _1zippo1.c
chapter10/part10_8/: _1vararr2d.c
chapter10/part10_9/: _1flc.c
chapter11/: _1strings1.c
chapter11/part11_4/: _1put1.c  _2put2.c  _3put_put.c
chapter11/part11_6/: _1sort_str.c
chapter11/part11_7/: _1mod_str.c
chapter11/part11_8/: _1repeat.c
chapter11/part11_9/: _1hello.c  _2strcnvt.c
chapter12/part12_2/: _1rand0.c  (+3 more)
(+161 files in other folders)
