cmake_minimum_required(VERSION 3.23)
project(c_primer_plus C)

set(CMAKE_C_STANDARD 11)

add_executable(c_primer_plus chapter16/part16_11/part16_11_1/_1byebye.c chapter16/part16_11/part16_11_2/_1qsorter.c chapter16/part16_12/part16_12_1/_1assert.c chapter16/part16_12/part16_12_2/_1statasrt.c chapter16/part16_13/_1mems.c chapter16/part16_14/_1varargs.c)